--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "openai": "^4.0.0",
+    "airtable": "^0.11.1",
+    "dotenv": "^16.3.1"
   }
 }
