--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ai-chatbot",
   "version": "1.0.0",
-  "main": "index.js"
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-   "express": "^4.18.2",
-   "multer": ^1.4.5-lts.1",
-    "pdf-parse": ^1.1.1",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
     "openai": "^4.0.0",
     "dotenv": "^16.3.1"
   }
